# packetbeeps

./: README.md  pyproject.toml
packetbeeps/: buzzer.py  generate_notes.py  main.py  test_buzzer.py
