[tool.poetry]
name = "packetbeeps"
version = "0.1.0"
description = "sniffer that also beeps"
authors = ["Shani Rubovitch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.6.1"
scipy = "^1.14.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
